fix: css menu margin on small screens

--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -236,7 +236,7 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     left: 180px;
   }
 
-  ul.pure-menu-list {
+  #menuList {
     margin-left: 50px;
   }
 }
