--- a/styles/style.css
+++ b/styles/style.css
@@ -238,7 +238,7 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     left: 180px;
   }
 
-  ul.pure-menu-list {
+  #menuList {
     margin-left: 50px;
   }
 }
